Change jobcard template and fix navbar when page is too short

--- a/resources/styles/gutenberg-block/joblist.scss
+++ b/resources/styles/gutenberg-block/joblist.scss
@@ -1,4 +1,4 @@
 .joblist > div {
-  width: 320px;
+  flex-grow: 1;
   margin-left: 20px;
 }
